--- a/MiniProjetoBanco/pom.xml
+++ b/MiniProjetoBanco/pom.xml
@@ -38,6 +38,12 @@
             <version>3.12.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>4.3.4</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
